# MiddleWare

NCT/: CMakeLists.txt
NCT/Source/: CMakeLists.txt  CMakeSources.cmake
NCT/Source/Allocators/: NctFrameAlloc.cpp  NctFrameAlloc.h  NctFreeAlloc.h  NctGroupAlloc.h  NctMemAllocProfiler.h  NctMemoryAllocator.cpp  NctMemoryAllocator.h  NctNonCopyable.h  NctPoolAlloc.h  NctStackAlloc.cpp  NctStackAlloc.h  NctStaticAlloc.h
NCT/Source/CMake/: HelperMethods.cmake  Properties.cmake
NCT/Source/CMake/Modules/: Findlibzmq.cmake  Findprotobuf.cmake
NCT/Source/Error/: NctException.h
NCT/Source/Message/: NctBoundedMessageQueue.h  NctMessageManager.cpp  NctMessageManager.h  NctMessageQueue.h  NctMsgBuffer.h
NCT/Source/Prerequisites/: NctPrerequisitesUtil.h
NCT/Source/Task/: NctPersistentTaskBase.cpp  NctPersistentTaskBase.h  NctTaskBase.cpp  NctTaskBase.h
NCT/Source/Task/CodeTask/: NctCodeMsgTask.cpp  NctCodeMsgTask.h  NctCodeOutRealMsgTask.cpp  NctCodeOutRealMsgTask.h  NctCodeOutStateMsgTask.cpp  NctCodeOutStateMsgTask.h
NCT/Source/Task/DecodeTask/: NctDecodeInRealMsgTask.cpp  NctDecodeInStateMsgTask.cpp  NctDecodeInStateMsgTask.h
NCT/Source/Threading/: NctAsyncOp.cpp  NctAsyncOp.h  NctSpinLock.h  NctTaskScheduler.cpp  NctTaskScheduler.h  NctThreadDefines.h  NctThreadPool.cpp  NctThreadPool.h
NCT/Source/Utility/: NctAny.h  NctModule.h
